fix(home): picture alignment

--- a/css/home.scss
+++ b/css/home.scss
@@ -50,6 +50,7 @@ h2 {
     justify-content: center;
 
     background-size: cover;
+    background-position: center;
   }
 
   h3 {
